feat: update unit tests to start working
